@@ -1,3 +1,8 @@
+2006-11-19  Ulrich Drepper  <drepper@redhat.com>
+
+	* nss/nss_files/files-hosts.c (LINE_PARSER): Support IPv6-style
+	addresses for IPv4 queries if they can be mapped.
+
 2006-11-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/x86_64/fpu/s_copysignf.S (__copysignf): Switch to .text.
